fix(docs): fixed dark mode

--- a/docs/src/less/index.less
+++ b/docs/src/less/index.less
@@ -78,7 +78,7 @@ figure.highlight {
 }
 
 .modules-expander {
-    background: var(--color-neutral-2);
+    background: var(--color-loading-fill-elevated);
     font-size: var(--font-size-medium);
     padding: 4px var(--spacing-200);
 }
@@ -88,7 +88,7 @@ figure.highlight {
 }
 
 .modules-expander__tip {
-    color: var(--color-neutral-8);
+    color: var(--color-foreground-primary);
     display: none;
     font-size: var(--font-size-default);
     font-style: italic;
